<resources>
    <string name="app_name">Hausaufgabe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="welcome">Köszöntjük a Dont eat alone alkalmazásban</string>
    <string name="firstName">Keresztnév</string>
    <string name="lastName">Vezetéknév</string>
    <string name="email">Email</string>
    <string name="password">Jelszó</string>
    <string name="job">Foglalkozás</string>
    <string name="hobby">Hobbik</string>
    <string name="male">Férfi</string>
    <string name="female">Nő</string>
    <string name="phone">Telefonszám</string>
    <string name="dateOfBorn">Születési dátum</string>
    <string name="sex">Nem</string>
    <string name="change">Változtat</string>
    <string name="profile">Profil</string>
    <string name="history">Történet</string>
    <string name="events">Események</string>
    <string name="succRegister">Sikeres regisztrácó</string>
    <string name="networkerror">Hálózati hiba</string>
    <string name="invalidparameters">Érvénytelen paraméterek</string>
    <string name="emailnotunique">Email nem egyedi</string>
    <string name="registrationerror">Regisztrációs hiba</string>
    <string name="incorrectemailorpw">Email vagy jelszó hibás</string>
    <string name="succAuthentication">Sikeres azonosítás</string>
    <string name="succdatachange">Successfully updated user data</string>
    <string name="title">Esemény neve</string>
    <string name="cancel">Vissza</string>
    <string name="save">Mentés</string>
    <string name="createevent">Esemény lérehozása</string>
    <string name="country">Ország</string>
    <string name="city">Város</string>
    <string name="description">Leírás</string>
    <string name="participants">Résztvevők száma</string>
    <string name="eventdate">Esemény időpontja</string>
    <string name="error">Hiba lépett fel</string>
    <string name="eventcreated">Esemény sikeresen létrehozva</string>
    <string name="date">Dátum</string>
    <string name="imin">Elfogad</string>
    <string name="citywithcolon">Város:</string>
    <string name="datewithcolon">Dátum:</string>
    <string name="titlewithcolon">Esemény címe:</string>
    <string name="details">Megtekint</string>
    <string name="descriptionwithcolon">Leírás:</string>
    <string name="maxparticipantswithcolon">Max résztvevők:</string>
    <string name="countrywithcolon">Ország:</string>
    <string name="eventdetails">Esemény részletek</string>
    <string name="creator">Esemény létrehozója</string>
    <string name="fnwithcolon">Keresztnév:</string>
    <string name="lnwithcolon">Vezetéknév:</string>
    <string name="emailwithcolon">Email:</string>
    <string name="participantswithcolon">Résztvevők:</string>
    <string name="succApply">Sikeres jelentkezés!</string>
</resources>
